# D0mmy

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.py  pyproject.toml  roadmap.md
.d0mmy/: module_index.json  module_index.md
.d0mmy/chroma/: chroma.sqlite3
backend/: config.py  exec_pipeline.py  index_api.py  main.py  pipeline.py  settings_api.py  terminal.py  ws_manager.py
backend/agents/: clarifier.py  coordinator.py  idea_builder.py  intent_router.py  roadmap_creator.py  scout.py  version_hook.py  version_oracle.py
backend/memory/: hdd.py  (+2 more)
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
data/: bom.json  module_index.json  module_index.md  sprints.json
extension/: background.js  content.js  manifest.json  popup.html  popup.js
prompts/: blueprint_synthesizer.md  clarifier.md  code_critic.md  complexity_scorer.md  coordinator.md  file_summarizer.md  gemini_direct_coder.md  intent_router.md  intersection_architect.md  module_coder.md  module_grouper.md  risk_assassin.md  rubric_aligner.md  system_base.md  tech_harvester.md  time_estimator.md  truncation.md  version_oracle.md
schemas/: blueprint.json  clarification.json  code_diff.json  complexity_score.json  coordinator.json  critic_review.json  file_summary.json  intent.json  message.json  module_group.json  risks.json  rubric.json  sprints.json  tech_report.json  time_estimates.json
scratch/: test_ws.py
scripts/: attach.py  launcher.py  projects.py  setup_keys.py
vscode-extension/: .vscodeignore  d0mmy-vscode-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
(+29 files in other folders)
