[project]
name = "d0mmy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "chromadb>=0.5",
    "pyserial>=3.5",
    "python-dotenv>=1.0",
    "google-genai>=1.73.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
